# aw

./: .buildinfo  FILESTORE_AUTO_INIT_SUMMARY.md  IMPLEMENTATION.md  QUICKREF.md  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  table_of_contents.html  test_filestore_auto_init.py
.github/workflows/: ci.yml
_modules/: index.html
_modules/aw/: base.html  cosmo.html  loading.html  orchestration.html  preparing.html  routing.html  tools.html  util.html  validation.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: aw.rst.txt
_sources/module_docs/aw/: base.rst.txt  cosmo.rst.txt  loading.rst.txt  orchestration.rst.txt  preparing.rst.txt  routing.rst.txt  tools.rst.txt  util.rst.txt  validation.rst.txt
aw/: __init__.py  base.py  cosmo.py  loading.py  orchestration.py  preparing.py  routing.py  tools.py  util.py  utils.py  validation.py
examples/: basic_usage.py
misc/: ai_agent_research.md  aw_demo.ipynb  aw_package_plan.md  aw_package_warmup.md  misc_notes.md
module_docs/: aw.html
module_docs/aw/: base.html  cosmo.html  loading.html  orchestration.html  preparing.html  routing.html  tools.html  util.html  validation.html
tests/: README.md  __init__.py  conftest.py  test_loading.py  test_validation.py  test_workflow.py
