[metadata]
name = aw
version = 0.0.2
url = https://github.com/thorwhalen/aw
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = mit
author = Thor Whalen
description = AI Agentic Workflow
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = aw

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

[options.extras_require]
testing = 
		

