[metadata]
name = aw
version = 0.1.1
url = https://github.com/thorwhalen/aw
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = mit
author = Thor Whalen
description = AI Agentic Workflows for data preparation and transformation
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
    ai
    agents
    agentic-workflows
    data-preparation
    llm
    react-pattern
    pandas
    dataframe
    cosmograph
    visualization
    code-execution
    validation
    orchestration
    claude-desktop
    mcp
display_name = aw

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.10
install_requires = 
    pandas
    config2py
    pydantic
    oa

[options.extras_require]
llm = 
    openai
    oa
cosmograph = 
    cosmograph
langchain = 
    langchain
    langchain-experimental
all = 
    openai
    oa
    cosmograph
    langchain
    langchain-experimental
testing = 
    pytest
    pytest-cov
    openai
    oa

[tool:pytest]
markers =
    real_llm: marks tests that use real LLM APIs (deselect with '-m "not real_llm"')
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_* 
		

